--- a/test/fixtures/involvements.yml
+++ b/test/fixtures/involvements.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: involvements
+#
+#  id         :integer          not null, primary key
+#  project_id :integer
+#  user_id    :integer
+#  hours      :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
