--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -8,6 +8,7 @@
 #  hours      :integer
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  tenured    :boolean
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
