--- a/test/fixtures/fields_jobs.yml
+++ b/test/fixtures/fields_jobs.yml
@@ -1,9 +1,10 @@
 # == Schema Information
 #
-# Table name: projects
+# Table name: fields_jobs
 #
 #  id         :integer          not null, primary key
-#  label      :string
+#  field_id   :integer
+#  job_id     :integer
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #
@@ -11,9 +12,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  label: MyString
-  semester_id: 1
+  field_id: 1
+  job_id: 1
 
 two:
-  label: MyString
-  semester_id: 1
+  field_id: 1
+  job_id: 1
