--- a/test/fixtures/fields.yml
+++ b/test/fixtures/fields.yml
@@ -8,6 +8,7 @@
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  position   :integer
+#  color      :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
