--- a/test/fixtures/teaching_modules.yml
+++ b/test/fixtures/teaching_modules.yml
@@ -16,6 +16,7 @@
 #  coefficient          :integer
 #  created_at           :datetime         not null
 #  updated_at           :datetime         not null
+#  user_id              :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
