--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -8,6 +8,7 @@
 #  updated_at  :datetime         not null
 #  description :text
 #  position    :integer
+#  user_id     :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
