--- a/test/fixtures/involvements.yml
+++ b/test/fixtures/involvements.yml
@@ -11,6 +11,8 @@
 #  description        :text
 #  hours_td           :integer          default(0)
 #  hours_tp           :integer          default(0)
+#  multiplier_td      :integer          default(2)
+#  multiplier_tp      :integer          default(3)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
