images, involvements linked to projects

--- a/test/fixtures/involvements.yml
+++ b/test/fixtures/involvements.yml
@@ -14,6 +14,7 @@
 #  multiplier_td      :integer          default(2)
 #  multiplier_tp      :integer          default(3)
 #  groups_tp          :integer          default(3)
+#  project_id         :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
