--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -10,6 +10,7 @@
 #  kind               :integer
 #  created_at         :datetime         not null
 #  updated_at         :datetime         not null
+#  student_hours      :float
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
