--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -2,14 +2,15 @@
 #
 # Table name: projects
 #
-#  id          :integer          not null, primary key
-#  label       :string
-#  created_at  :datetime         not null
-#  updated_at  :datetime         not null
-#  description :text
-#  position    :integer
-#  user_id     :integer
-#  year_id     :integer
+#  id                   :integer          not null, primary key
+#  label                :string
+#  created_at           :datetime         not null
+#  updated_at           :datetime         not null
+#  description          :text
+#  position             :integer
+#  user_id              :integer
+#  year_id              :integer
+#  detailed_description :text
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
