--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -11,6 +11,7 @@
 #  user_id              :integer
 #  year_id              :integer
 #  detailed_description :text
+#  sublabel             :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
