--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -14,6 +14,7 @@
 #  teacher_hours      :float
 #  label              :string
 #  description        :text
+#  project_id         :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
