--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -21,6 +21,7 @@
 #  current_sign_in_ip     :inet
 #  last_sign_in_ip        :inet
 #  admin                  :boolean          default(FALSE), not null
+#  email_secondary        :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
